--- a/real-estate-investment-advisor_compressed.ipynb
+++ b/real-estate-investment-advisor_compressed.ipynb
@@ -5599,7 +5599,7 @@
     "5. Extensive feature engineering, preprocessing, and model optimization ensure accurate, stable, and reliable predictions.\n",
     "6. SHAP analysis and feature importance visualizations enhance the interpretability and transparency of the model outputs.\n",
     "7. Market insights and visual analytics help users understand property trends, patterns, and influencing factors.\n",
-    "8. The StreamNet application consolidates all functionalities into an accessible, user-friendly interface.\n",
+    "8. The Streamlit application consolidates all functionalities into an accessible, user-friendly interface.\n",
     "9. Single-prediction and bulk-prediction tabs support both individual investors and business users handling large datasets.\n",
     "10. The Feature Importance & SHAP tab improves trust by explaining how each feature contributes to the model’s decisions.\n",
     "11. The solution is scalable, making it suitable for real estate agencies, analysts, and investment platforms.\n",
@@ -6024,3 +6024,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
